--- a/app/Resources/views/default/view.html.twig
+++ b/app/Resources/views/default/view.html.twig
@@ -14,7 +14,9 @@
                     <div class="">
                         <h4 class="m-b-5">{{moustique.name}}</h4>
                         <p class="text-muted">@{{moustique.name}}</p>
-
+                        {% if app.user.moustiques is empty %}
+                          <a href="/add/{{moustique.id}}" class="btn btn-success"> Ajouter Moustique</a>
+                        {% else %}
                         {% for temp in app.user.moustiques %}
                           {% if moustique.id == temp.id %}
                           <a href="/remove/{{moustique.id}}" class="btn btn-danger"> Supprimer Moustique</a>
@@ -23,6 +25,7 @@
                           {% endif %}
 
                         {% endfor %}
+                        {% endif %}
                         <br></br>
                     </div>
 
