--- a/frontend/partials/liste.html
+++ b/frontend/partials/liste.html
@@ -1,14 +1,31 @@
-<h1>Mes Moustiques</h1>
-<div ng-controller="ListeCtrl">
-<input type="text" class="search" ng-model="searchString" placeholder="Enter your search terms" />
-<table  border="1">
-    <tr ng-repeat="x in liste | searchFor:searchString">
-        <td>{{x.name}}</td>
-        <td>{{x.email}}</td>
-        <td>{{x.id}}</td>
-        <td>
-            <button type="button" name="view" ng-click="getUser(x.id)" class="btn btn-primary">View</button>
-        </td>
-    </tr>
-</table>
+
+
+
+<link rel="stylesheet" href="styles/list.css">
+<div class="container" ng-controller="ListeCtrl" >
+
+  <div class="col-md-10 col-md-offset-1">
+      <div class="panel panel-success">
+          <div class="panel-heading">Ma liste de moustiques !</div>
+      </div>
+    </div>
+<div class="row">
+
+  <div class="col-md-3" ng-repeat="x in liste | searchFor:searchString">
+        <div class="panel widget">
+          <div class="widget-header bg-primary"></div>
+          <div class="widget-body text-center">
+            <img alt="Profile Picture" class="widget-img img-circle img-border-light" src="https://bootdey.com/img/Content/avatar/avatar1.png">
+            <h4 class="mar-no">{{x.name}}</h4>
+            <p class="text-muted mar-btm">{{x.email}}</p>
+
+            <div class="pad-ver">
+              <button type="button" name="view" ng-click="getUser(x.id)" class="btn btn-primary">View</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+</div>
+
 </div>
