--- a/frontend/partials/login.html
+++ b/frontend/partials/login.html
@@ -1,6 +1,6 @@
 
 <style media="screen">
-        .navbar-login
+.navbar-login
 {
 width: 305px;
 padding: 10px;
@@ -18,7 +18,42 @@ padding-top: 0px;
 {
 font-size: 87px;
 }
-        </style>
+</style>
+
+<div class="container-fluid">
+    <!-- Second navbar for sign in -->
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-2">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#!/">Moustiques</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="navbar-collapse-2">
+
+              <ul class="nav navbar-nav navbar-right">
+                <li>
+                  <a>
+                    <button type="button" name="button" ng-click="gotoLogin()">Login</button>
+                  </a>
+                </li>
+                <li>
+                  <a>
+                      <button type="button" name="button" ng-click="gotoRegister()">Register</button>
+                  </a>
+                </li>
+              </ul>
+
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container -->
+    </nav><!-- /.navbar -->
+</div><!-- /.container-fluid -->
 
 <div class="container">
     <div class="row">
