--- a/frontend/partials/profile.html
+++ b/frontend/partials/profile.html
@@ -1,44 +1,94 @@
 <h1>Profile</h1>
+<link rel="stylesheet" href="styles/profil.css">
+    <div class="container" ng-model="profile">
+    <div class="row">
+        <div class="col-lg-3 col-md-4">
+            <div class="text-center card-box">
+                <div class="member-card">
+                    <div class="thumb-xl member-thumb m-b-10 center-block">
+                        <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="img-circle img-thumbnail" alt="profile-image">
+                    </div>
 
-<div ng-model="profile">
+                    <div class="">
+                        <h4 class="m-b-5">{{profile.name}}</h4>
+                        <p class="text-muted">@{{profile.name}}</p>
+                    </div>
 
-  <form ng-submit="updateProfile(profile)" method="post">
 
-    <div class="form-group">
-      <label for="name">Name : </label>
-      <input type="text" name="name" ng-model="profile.name">
+                    <div class="text-left m-t-40">
+                        <p class="text-muted font-13"><strong>Full Name :</strong> <span class="m-l-15">{{profile.name}}</span></p>
+
+                        <p class="text-muted font-13"><strong>Email :</strong> <span class="m-l-15">{{profile.email}}</span></p>
+
+                    </div>
+
+                </div>
+            </div> <!-- end card-box -->
+        </div> <!-- end col -->
+
+
+        <div class="col-md-8 col-lg-9">
+            <div class="">
+                <div class="">
+                    <ul class="nav nav-tabs navtab-custom">
+
+
+                        <li class="active">
+                            <a href="#settings" data-toggle="tab" aria-expanded="false">
+                                <span class="visible-xs"><i class="fa fa-cog"></i></span>
+                                <span class="hidden-xs">Paramètres</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="tab-content">
+
+                        <div class="tab-pane active" id="settings">
+
+
+                          <form ng-submit="updateProfile(profile)" method="post">
+
+                            <div class="form-group">
+                              <label for="name">Name : </label>
+                              <input type="text" name="name" ng-model="profile.name">
+                            </div>
+
+                            <div class="form-group">
+                              <label for="name">Email : </label>
+                              <input type="text" name="email" ng-model="profile.email">
+                            </div>
+
+                            <div class="form-group">
+                              <label for="name">Password : </label>
+                              <input type="password" name="password" ng-model="profile.password">
+                            </div>
+
+                            <div class="form-group">
+                              <label for="name">Age : </label>
+                              <input type="text" name="age" ng-model="profile.age">
+                            </div>
+
+                            <div class="form-group">
+                              <label for="name">Race : </label>
+                              <input type="text" name="race" ng-model="profile.race">
+                            </div>
+
+                            <div class="form-group">
+                              <label for="name">Famille : </label>
+                              <input type="text" name="famille" ng-model="profile.famille">
+                            </div>
+
+                            <div class="form-group">
+                              <label for="name">Nourriture : </label>
+                              <input type="text" name="name" ng-model="profile.nourriture">
+                            </div>
+
+                            <button class="btn btn-primary" type="submit" name="update" >Update</button>
+                          </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> <!-- end col -->
     </div>
-
-    <div class="form-group">
-      <label for="name">Email : </label>
-      <input type="text" name="email" ng-model="profile.email">
-    </div>
-
-    <div class="form-group">
-      <label for="name">Password : </label>
-      <input type="password" name="password" ng-model="profile.password">
-    </div>
-
-    <div class="form-group">
-      <label for="name">Age : </label>
-      <input type="text" name="age" ng-model="profile.age">
-    </div>
-
-    <div class="form-group">
-      <label for="name">Race : </label>
-      <input type="text" name="race" ng-model="profile.race">
-    </div>
-
-    <div class="form-group">
-      <label for="name">Famille : </label>
-      <input type="text" name="famille" ng-model="profile.famille">
-    </div>
-
-    <div class="form-group">
-      <label for="name">Nourriture : </label>
-      <input type="text" name="name" ng-model="profile.nourriture">
-    </div>
-
-    <button class="btn btn-primary" type="submit" name="update" >Update</button>
-  </form>
+    <!-- end row -->
 </div>
