--- a/frontend/partials/profile.html
+++ b/frontend/partials/profile.html
@@ -1,5 +1,8 @@
-<h1>Profile</h1>
+
 <link rel="stylesheet" href="styles/profil.css">
+
+<link rel="stylesheet" href="styles/navbar.css">
+
     <div class="container" ng-model="profile">
     <div class="row">
         <div class="col-lg-3 col-md-4">
