--- a/frontend/partials/view.html
+++ b/frontend/partials/view.html
@@ -1,6 +1,7 @@
 
-
+<link rel="stylesheet" href="styles/navbar.css">
 <link rel="stylesheet" href="styles/profil.css">
+
 <div class="container" ng-model="user">
   <div class="row">
     <div class="col-lg-3 col-md-4">
