--- a/frontend/styles/navbar.css
+++ b/frontend/styles/navbar.css
@@ -21,3 +21,21 @@
     .navbar .nav-collapse .navbar-form { margin: 0; }
     .nav-collapse>li { float: none; }
 }
+.navbar-login
+{
+width: 305px;
+padding: 10px;
+padding-bottom: 0px;
+}
+
+.navbar-login-session
+{
+padding: 10px;
+padding-bottom: 0px;
+padding-top: 0px;
+}
+
+.icon-size
+{
+font-size: 87px;
+}
