--- a/frontend/partials/liste.html
+++ b/frontend/partials/liste.html
@@ -1,8 +1,26 @@
-
-
-
 <link rel="stylesheet" href="styles/list.css">
+<link rel="stylesheet" href="styles/navbar.css">
+<link rel="stylesheet" href="styles/search.css">
+
 <div class="container" ng-controller="ListeCtrl" >
+  <div class="container">
+    <div class="row">
+          <div class="col-sm-6 col-sm-offset-3">
+              <div id="imaginary_container">
+                  <div class="input-group stylish-input-group">
+                      <input type="text" class="form-control" ng-model="searchString" placeholder="Search" >
+                      <span class="input-group-addon">
+                          <button type="submit">
+                              <span class="glyphicon glyphicon-search"></span>
+                          </button>
+                      </span>
+                  </div>
+              </div>
+          </div>
+    </div>
+  </div>
+
+  <br>
 
   <div class="col-md-10 col-md-offset-1">
       <div class="panel panel-success">
