--- a/frontend/partials/new.html
+++ b/frontend/partials/new.html
@@ -8,7 +8,7 @@
         <div class="panel panel-default">
           <div class="panel-heading">Inscription</div>
           <div class="panel-body">
-            <form class="form-horizontal" role="form" method="post" ng-submit="register(form)">
+            <form class="form-horizontal" role="form" method="post" ng-submit="createUser(form)">
 
               <div class="form-group">
                   <label for="Username" class="col-md-4 control-label">Username</label>
@@ -23,22 +23,6 @@
 
                   <div class="col-md-6">
                       <input id="email" type="email" class="form-control" name="username" ng-model="form.email">
-                  </div>
-              </div>
-
-              <div class="form-group">
-                  <label for="Password" class="col-md-4 control-label">Password</label>
-
-                  <div class="col-md-6">
-                      <input id="password" type="password" class="form-control" name="password" ng-model="form.password.first">
-                  </div>
-              </div>
-
-              <div class="form-group">
-                  <label for="confirm" class="col-md-4 control-label">Confirm Password</label>
-
-                  <div class="col-md-6">
-                      <input id="confirm" type="text" class="form-control" name="confirm" ng-model="form.password.second">
                   </div>
               </div>
 
@@ -77,7 +61,7 @@
               <div class="form-group">
                   <div class="col-md-6 col-md-offset-4">
                       <button type="submit" class="btn btn-primary" name="button" ng-disabled="sending">
-                          <i class="fa fa-btn fa-sign-in"></i> Register
+                          <i class="fa fa-btn fa-sign-in"></i> Create
                       </button>
                   </div>
               </div>
