--- a/frontend/partials/profile.html
+++ b/frontend/partials/profile.html
@@ -62,7 +62,7 @@
 
                             <div class="form-group">
                               <label for="name">Password : </label>
-                              <input type="password" name="password" ng-model="profile.password">
+                              <input type="password" name="password" >
                             </div>
 
                             <div class="form-group">
